[package]
name = "obsidian"
version = "0.1.0"
authors = ["Akash <amelachuri@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.0"
vulkano-shaders = "0.20.0"
minifb = "0.19.2"
rand = "0.8.3"
nalgebra = "0.18"
